--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "src/main-theme.scss",
               "src/styles.scss"
             ],
             "scripts": []
